# hls_recurse

./: .gitignore  legup_notes.md  readme.md  vhls_notes.md
include/: complex.hpp  (+12 more)
src/: CMakeLists.txt  format_errors.py
src/core/: CMakeLists.txt  perf_test.cpp  state_machine_builder_test.cpp  state_machine_self_recursion_test.cpp  state_machine_steps_test.cpp  var_expr_test.cpp
src/eval/: CMakeLists.txt
src/eval/legup/: CMakeLists.txt  GenerateRTL.cpp  GenerateRTL.patch  Makefile.common  Makefile_short_cut.common  config.tcl  ip_config.tcl  ip_legup.makefile  legup.makefile  legup_fft.cpp  legup_fib.cpp  legup_generic.cpp  legup_ip_generic.cpp
src/eval/vhls/: CMakeLists.txt  gen_implement_tcl.sh  gen_simulate_tcl.sh  gen_synthesise_tcl.sh  gen_synthesise_tcl_short_cut.sh
src/eval/vhls/ackerman/: vhls_ackerman.cpp  vhls_ackerman_tb.vhd
src/eval/vhls/ackerman_man/: vhls_ackerman_man.cpp  vhls_ackerman_man_tb.vhd
src/eval/vhls/fft_indexed/: vhls_fft_indexed.cpp  vhls_fft_indexed_tb.vhd
src/eval/vhls/fft_indexed_man/: vhls_fft_indexed_man.cpp  vhls_fft_indexed_man_tb.vhd
src/eval/vhls/fib/: vhls_fib.cpp  vhls_fib_tb.vhd  vhls_fib_test.cpp
src/eval/vhls/fib_man/: vhls_fib_man.cpp  vhls_fib_man_tb.vhd
src/eval/vhls/miser_indexed/: vhls_miser_indexed.cpp  vhls_miser_indexed_tb.vhd
src/eval/vhls/miser_indexed_man/: vhls_miser_indexed_man.cpp  vhls_miser_indexed_man_tb.vhd
src/eval/vhls/mmm_indexed/: vhls_mmm_indexed.cpp
src/eval/vhls/naive_mmm_indexed/: vhls_naive_mmm_indexed.cpp  vhls_naive_mmm_indexed_tb.vhd
src/eval/vhls/sort_indexed/: vhls_sort_indexed.cpp  vhls_sort_indexed_tb.vhd
src/eval/vhls/sort_indexed_man/: vhls_sort_indexed_man.cpp  vhls_sort_indexed_man_tb.vhd
src/eval/vhls/strassen_indexed/: vhls_strassen_indexed.cpp
src/eval/vhls/strassen_indexed_v2/: vhls_strassen_indexed_v2.cpp  vhls_strassen_indexed_v2_tb.vhd
src/eval/vhls/strassen_indexed_v2_man/: vhls_strassen_indexed_v2_man.cpp  vhls_strassen_indexed_v2_man_tb.vhd
src/eval/vhls/sudoku/: vhls_sudoku.cpp  vhls_sudoku_tb.vhd
src/eval/vhls/sudoku_man/: vhls_sudoku_man.cpp  vhls_sudoku_man_tb.vhd
src/eval/vhls/sum_indexed/: vhls_sum_indexed.cpp  vhls_sum_indexed_tb.vhd
src/eval/vhls/sum_indexed_man/: vhls_sum_indexed_man.cpp  vhls_sum_indexed_man_tb.vhd
src/eval/vhls/tiled_mmm_indexed/: vhls_tiled_mmm_indexed.cpp  vhls_tiled_mmm_indexed_tb.vhd
src/examples/: CMakeLists.txt  ackerman_test.cpp  fft_indexed_test.cpp  fft_test.cpp  fib_test.cpp  miser_indexed_test.cpp  miser_test.cpp  mmm_test.cpp  sort_indexed_test.cpp  sort_test.cpp  strassen_indexed_test.cpp  strassen_indexed_v2_test.cpp  strassen_test.cpp  sudoku_test.cpp  sum_indexed_test.cpp  sum_test.cpp  tiled_mmm_indexed_test.cpp  tiled_mmm_test.cpp
src/llvm/: CMakeLists.txt  LLVMConfig.cmake
src/llvm/shorten_labels/: CMakeLists.txt  ShortenLabels.cpp  test_source.bc  test_source.cpp
src/mutual/: CMakeLists.txt  function_def_test.cpp  multi_stack_test.cpp
src/queue/: queue.hpp
(+81 files in other folders)
